<!--
  ~ Copyright (c) 2020 jesusd0897.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="app_name" translatable="false">WallKube</string>
    <string name="app_dev" translatable="false">jesusd0897</string>
    <string name="app_dev_email" translatable="false">jesus0897@gmail.com</string>
    <string name="app_year" translatable="false">2020</string>
    <string name="app_copyright" translatable="false">©2020</string>
    <string name="app_brief" translatable="false"> “Alea iacta est.”\n- Gaius Iulius Caesar</string>

    <string name="rate_us_on_cubapk">Calificar en Cubapk</string>
    <string name="rate_us_on_apkpure">Calificar en APKPure</string>

    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="close">Cerrar</string>
    <string name="open">Abrir</string>
    <string name="select">Seleccionar</string>
    <string name="licenses">Licencias</string>
    <string name="settings">Ajustes</string>
    <string name="change_log_version">Versión</string>
    <string name="support">Soporte</string>
    <string name="we_sorry">Lo sentimos</string>
    <string name="no_items_found">No se encuentran elementos para mostrar</string>
    <string name="default_empty_title">Sin elementos</string>

    <string name="search_hint_text">Buscar…</string>
    <string name="share">Compartir</string>
    <string name="details">Detalles</string>
    <string name="set_wallpaper">Establecer como fondo</string>
    <string name="app_subtitle">Wallpapers para todos…</string>
    <string name="set_wallpaper_done">Fondo de pantallas actualizado!!</string>
    <string name="sections">Secciones</string>
    <string name="favorites">Favoritos</string>
    <string name="email_app_no_found">No se encuentra ninguna aplicación de correo disponible para realizar la acción.</string>
    <string name="set_wallpaper_question">¿Desea establecer esta imagen como fondo de pantallas?</string>

    <string name="section_name1">Urbano</string>
    <string name="section_subtitle1">Urbano descripción</string>
    <string name="section_name2">Natural</string>
    <string name="section_subtitle2">Natural descripción</string>
    <string name="section_name3">Artístico</string>
    <string name="section_subtitle3">Artístico descripción</string>
    <string name="section_name4">Flat</string>
    <string name="section_subtitle4">Flat descripción</string>
    <string name="mark_has_favorite">Añadir a favoritos</string>
    <string name="unmark_from_favorites">Remover de favoritos</string>
    <string name="permissions_required">Se necesitan permisos para realizar la acción.</string>
    <string name="balance">Cantidad</string>
    <string name="password">Contraseña de transferencia</string>
    <string name="invite_to_coffee">Invítame a un café</string>
    <string name="send_balance">Enviar donación</string>
    <string name="required_field">Campo requerido</string>
    <string name="value_cant_be_0">El valor no puede ser 0</string>
    <string name="send_balance_msg">Si te gusta la aplicación y quieres ayudar a que mejore puedes hacer una donación a su desarrolador invitándolo a un café.</string>

</resources>
