<!--
  ~ Copyright (c) 2020 jesusd0897.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_sections"
            android:checked="true"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/sections" />
        <item
            android:id="@+id/action_favorites"
            android:icon="@drawable/ic_folder_special_black_24dp"
            android:title="@string/favorites" />
    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>